Fix button border/background painting.

Regression from I7e4922fcb73a185b873acf3525d

TBR=sky@chromium.org

Bug: 756719,756720,756728,756734,756737,756848
Change-Id: I35f34055bbe0982d20d64ea1a0f05b1a5231a7a7
Reviewed-on: https://chromium-review.googlesource.com/621446
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495604}
Former-commit-id: fd97f8280d14e0638f766278936445ebc5ea1605